<resources>
    <string name="app_name">GITHUB</string>
    <string name="nav_overview">Overview</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repository">Repository</string>
    <string name="theme_settings">Theme</string>
    <string name="text_dark">Dark Mode</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="heroes_name">Username</string>
    <string name="location_name">Location</string>
    <string name="user_name">Name</string>
</resources>